--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,12 @@
   "keywords": ["laravel", "excel", "csv", "xls", "xlsx"],
   "description": "Fast Excel import/export for Laravel",
   "require": {
-    "php": "^7.1|^8.0",
-    "illuminate/support": "5.3.* || 5.4.* || 5.5.* || 5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0 || ^8.0",
+    "php": "^7.0|^8.0",
+    "illuminate/support": "~5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0 || ^8.0",
     "box/spout": "^3"
   },
   "require-dev": {
-    "illuminate/database": "^6.20.12 || ^7.30.4 || ^8.24.0",
+    "illuminate/database": "~5.2.0|~5.3.0|~5.4.0|~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0.0|^7.0.0|^8.0.0",
     "phpunit/phpunit": "^9.5"
   },
   "autoload": {
