--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "description": "Fast Excel import/export for Laravel",
   "require": {
     "php": "^7.0|^8.0",
-    "illuminate/support": "~5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0 || ^8.0",
+    "illuminate/support": "5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0 || ^8.0",
     "box/spout": "^3"
   },
   "require-dev": {
